# ARCH-Comp-2024-Repeatability

./: .gitignore  AbstractFuelControl_M1_acc.mexw64  Autotrans_shift.slxc  Readme.md  narmamaglev_v1.slxc  pyproject.toml
ArchBenchmarks/: Autotrans_shift.slxc  f16.py
ArchBenchmarks/benchmarks/: __main__.py
ConBOExp/: AbstractFuelControl_M1.slxc  AbstractFuelControl_M1_acc.mexa64  Autotrans_shift.slxc  generateValidationFiles_AFC2x_I2.py  generateValidationFiles_AFC33_I2.py  generateValidationFiles_AT_I1.py  generateValidationFiles_AT_I2.py  generateValidationFiles_CC_I1.py  generateValidationFiles_CC_I2.py  generateValidationFiles_NN1x_I1.py  generateValidationFiles_NN1x_I2.py  generateValidationFiles_NNx_I1.py  generateValidationFiles_NNx_I2.py  generateValidationFiles_SC_I1.py  generateValidationFiles_SC_I2.py  narmamaglev_v1.slxc  run_valid_scripts.sh
ConBOExp/ValidationFiles/: generateValidationFiles_CC_I1.py  generateValidationFiles_CC_I2.py
ConBOExp/benchmarks/: __main__.py
PartXExp/: AbstractFuelControl_M1.slx  AbstractFuelControl_M1.slxc  Autotrans_shift.slxc  narmamaglev_v1.slxc  run_testfiles.sh  sldemo_autotrans_mod01.mdl  sldemo_autotrans_mod01.slxc
PartXExp/benchmarks/: __main__.py
benchmarks/: gpr_external.py
benchmarks/AFC_benchmark/: run_AFC33_I2.py
benchmarks/AT_benchmark/: run_ATall_I1.py
benchmarks/CC_benchmark/: run_CCall_I1.py  run_CCall_I2.py
benchmarks/NN_benchmark/: run_NN1x_I2.py
benchmarks/SC_benchmark/: run_SC_I2.py
benchmarks/misc_files/: test_afc.py  test_at.py  test_nn.py  test_sc.py
benchmarks/models/: __init__.py  (+1 more)
(+121 files in other folders)
